tests/ui/borrowck/borrowck-describe-field-generic-param-owned-box.stderr
error[E0507]: cannot move out of `self.0` which is behind a mutable reference
  --> $DIR/borrowck-describe-field-generic-param-owned-box.rs:52:50
   |
LL |             free(transmute::<NonNull<T>, *mut _>(self.0));
   |                                                  ^^^^^^ move occurs because `self.0` has type `NonNull<T>`, which does not implement the `Copy` trait

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0507`.
